fix: set project header size on small screens

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -717,6 +717,11 @@ a.zola-anchor {
   .content {
     padding: 20px
   }
+  .projects {
+    > h2 {
+      font-size: 20px;
+    }
+  }
   table {
     font-size: 0.90rem;
   }
